# spam-detector

./: .gitignore  INSTALL.md  README.md  config.yaml  pyproject.toml  requirements.txt
src/spam_detector/: api.py  cli.py  config.py  data.py  evaluate.py  models.py  predict.py  train.py
tests/: test_cli.py  test_data_loader.py  test_predict.py  test_train_pipeline.py
