[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-detector"
version = "0.1.0"
description = "Email/SMS spam detector (TF-IDF + Naive Bayes)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "scikit-learn",
  "joblib",
  "matplotlib",
  "fastapi",
  "uvicorn",
  "pyyaml",
  "types-PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
files = ["src/spam_detector"]
python_version = "3.11"
ignore_missing_imports = true

[tool.coverage.run]
source = ["spam_detector"]

[tool.coverage.report]
omit = [
  "tests/*",
]
